src/test/ui/coherence/coherence-impls-copy.stderr
error[E0119]: conflicting implementations of trait `std::marker::Copy` for type `i32`
  --> $DIR/coherence-impls-copy.rs:5:1
   |
LL | impl Copy for i32 {}
   | ^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `core`:
           - impl Copy for i32;

error[E0119]: conflicting implementations of trait `std::marker::Copy` for type `&NotSync`
  --> $DIR/coherence-impls-copy.rs:29:1
   |
LL | impl Copy for &'static NotSync {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `core`:
           - impl<T> Copy for &T
             where T: ?Sized;

error[E0119]: conflicting implementations of trait `std::marker::Copy` for type `&[NotSync]`
  --> $DIR/coherence-impls-copy.rs:34:1
   |
LL | impl Copy for &'static [NotSync] {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `core`:
           - impl<T> Copy for &T
             where T: ?Sized;

error[E0206]: the trait `Copy` may not be implemented for this type
  --> $DIR/coherence-impls-copy.rs:22:15
   |
LL | impl Copy for &'static mut MyType {}
   |               ^^^^^^^^^^^^^^^^^^^ type is not a structure or enumeration

error[E0206]: the trait `Copy` may not be implemented for this type
  --> $DIR/coherence-impls-copy.rs:26:15
   |
LL | impl Copy for (MyType, MyType) {}
   |               ^^^^^^^^^^^^^^^^ type is not a structure or enumeration

error[E0206]: the trait `Copy` may not be implemented for this type
  --> $DIR/coherence-impls-copy.rs:31:15
   |
LL | impl Copy for [MyType] {}
   |               ^^^^^^^^ type is not a structure or enumeration

error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/coherence-impls-copy.rs:5:1
   |
LL | impl Copy for i32 {}
   | ^^^^^^^^^^^^^^---
   | |             |
   | |             `i32` is not defined in the current crate
   | impl doesn't use only types from inside the current crate
   |
   = note: define and implement a trait or new type instead

error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/coherence-impls-copy.rs:26:1
   |
LL | impl Copy for (MyType, MyType) {}
   | ^^^^^^^^^^^^^^----------------
   | |             |
   | |             this is not defined in the current crate because tuples are always foreign
   | impl doesn't use only types from inside the current crate
   |
   = note: define and implement a trait or new type instead

error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/coherence-impls-copy.rs:31:1
   |
LL | impl Copy for [MyType] {}
   | ^^^^^^^^^^^^^^--------
   | |             |
   | |             this is not defined in the current crate because slices are always foreign
   | impl doesn't use only types from inside the current crate
   |
   = note: define and implement a trait or new type instead

error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/coherence-impls-copy.rs:34:1
   |
LL | impl Copy for &'static [NotSync] {}
   | ^^^^^^^^^^^^^^------------------
   | |             |
   | |             this is not defined in the current crate because slices are always foreign
   | impl doesn't use only types from inside the current crate
   |
   = note: define and implement a trait or new type instead

error: aborting due to 10 previous errors

Some errors have detailed explanations: E0117, E0119, E0206.
For more information about an error, try `rustc --explain E0117`.
